updated install script to install numpy-scipy properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
 - 3.5
 
 install:
-- sudo apt-get install scipy
+- sudo apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran
+- pip install scipy
 
 script:
 - python -m unittest discover -s "./tests/" -p "*.py"
