--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,23 @@ language: python
 python:
 - 3.5
 
+env: 
+-NUMPY=1.8
+-SCIPY=0.13
+
+before_install:
+ - travis_retry wget http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
+ - chmod +x miniconda.sh
+ - bash miniconda.sh -b -p $HOME/miniconda
+ - export PATH=/home/travis/miniconda/bin:$PATH
+ - conda update --yes conda
+
 install:
-- sudo apt-get install python-numpy python-scipy
+ - conda create --yes -n test python=$TRAVIS_PYTHON_VERSION
+ - source activate test
+ - conda install --yes numpy=$NUMPY scipy=$SCIPY pip
+ - pip install setuptools
+ - python setup.py install
 
 script:
-- python -m unittest discover -s "./tests/" -p "*.py"
+- python -m unittest discover -v -s "./tests/" -p "*.py"
