--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
 - 3.5
 
 env:
-- NUMPY=1.10.4
-- SCIPY=0.17.0
+- NUMPY=1.10.4 SCIPY=0.17.0
 
 before_install:
  - travis_retry wget http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
